DC16/kube_yaml/01_single_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
    creator: hyun
    version: "1"
    date: "2023-07-25"
    year: "2023"
    month: "07"
    day: "25"
spec:
  containers:
  - name: container-name
    image: nginx:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "250m"
    ports:
      - containerPort: 80
  imagePullSecrets:
  - name: docker-pull-secret
