DC16/kube_yaml/02_single_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod2
  labels:
    app: web
    app-type: nginx
spec:
  containers:
  - name: container-name
    image: nginx:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "250m"
    ports:
      - containerPort: 80
  imagePullSecrets:
  - name: docker-pull-secret
