DC16/kube_yaml/08_volume_nfs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vol-pod
  labels:
    name: vol-pod
spec:
  nodeName: kube-worker-node2
  containers:
  - name: vol-pod
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    volumeMounts:
    - name: nfs-volume
      mountPath: /usr/share/nginx/html
  volumes:
  - name: nfs-volume
    nfs:
      path: /mnt/nfs_share1
      server: 192.168.10.14
      readOnly: true
  imagePullSecrets:
  - name: docker-pull-secret
